--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="StyleSheet"  type="text/css" href="css/estilos.css" />
 	<link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
 	
